# OpenGL_Model_Loader

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/fragment/: cubeMapFragmentShader.glsl  cubeObjectFragmentShader.glsl  lightCubeFragmentShader.glsl
assets/shaders/vertex/: cubeMapVertexShader.glsl  cubeObjectVertexShader.glsl  lightCubeVertexShader.glsl
include/config/: Config.hpp
include/core/: Input.hpp
include/graphics/: Camera.hpp  Mesh.hpp  Model.hpp  Renderer.hpp  Shader.hpp  Texture.hpp
src/: main.cpp
src/core/: Input.cpp
src/graphics/: Camera.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
